--- a/MetricsAgent/MetricsAgent.csproj
+++ b/MetricsAgent/MetricsAgent.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="MySql.Data" Version="8.0.29" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	  <PackageReference Include="NLog" Version="4.7.15" />
 	  <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-	  <PackageReference Include="System.Data.SQLite.Core" Version="1.0.115.5" />
   </ItemGroup>
 
 </Project>                                                                                                                                                                                                                                                                                                                                        
