--- a/MetricsAgent/MetricsAgent.csproj
+++ b/MetricsAgent/MetricsAgent.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="AutoMapper" Version="11.0.1" />
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	  <PackageReference Include="Dapper" Version="2.0.123" />
 	  <PackageReference Include="MySql.Data" Version="8.0.29" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	  <PackageReference Include="NLog" Version="4.7.15" />
