--- a/MetricsManager/appsettings.json
+++ b/MetricsManager/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Settings": {
+    "DatabaseOptions": {
+      "ConnectionString": "server=localhost; user=root; database = agents; password = 123456;"
+    }
+  }
 }
