--- a/MetricsManager/nlog.config
+++ b/MetricsManager/nlog.config
@@ -12,7 +12,7 @@
 	<!-- the targets to write to -->
 	<targets>
 		<target xsi:type="File" name="mylog"
-			fileName="c:\Logs\MetricsManager\metricsmabager-all-${shortdate}.log"
+			fileName="c:\Logs\MetricsManager\metricsmanager-all-${shortdate}.log"
 			layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
 
